--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,36 +4,43 @@
 <meta charset="utf-8" />
 <title>GCT - Login</title>
 <link rel="stylesheet" href="../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" />
+<link rel="stylesheet" th:href="@{/css/login.css}"  />
 </head>
 <body>
 
-   		<div class="container container-table" style="margin-top:200px;">
-    <div class="row vertical-center-row">
-        <div class="text-center col-md-4 col-md-offset-4">
-        	<div class="panel panel-primary">
-				<div class="panel-heading" style="background:#4a148c;">Authentification</div>
-				<div class="panel-body">
-					<form th:action="@{/login}" method="post">
-						<div th:if="${param.error}" class="text-danger form-group">
-							Invalid email or password !!!
-						</div>
-						<div th:if="${param.logout}" class="text-success form-group">
-							You have been logged out
-						</div>
-						<div class="form-group">
-							<label>Address mail</label>
-							<input type="text" name="username" class="form-control" />
-						</div>
-						<div class="form-group">
-							<label>Password</label>
-							<input type="password" name="password" class="form-control" />
-						</div>
-						<div class="text-center"><button type="submit" class="btn btn-default">Se connecter</button></div>
-					</form>
-				</div>
-			</div>
-        </div>
-    </div>
-</div>
+	<img th:src="@{/images/GCT-logo.svg}" style="position: absolute; top: 10%; left: 10%;" />	
+
+   	<div class="container container-table login-container">
+	    <div class="row vertical-center-row">
+	        <div class=" col-md-4 col-md-offset-4">
+	        	<div class="panel panel-default thymbnail login-box">
+					<div class="panel-body">
+						<form th:action="@{/login}" method="post">
+							<div class="alert-success alert">
+								<div th:if="${param.error}" class="text-danger form-group">
+									Invalid email or password !!!
+								</div>
+
+								<div th:if="${param.logout}" class="text-success form-group">
+									You have been logged out
+								</div>
+							</div>
+							
+							<div class="form-group">
+								<label>Address mail</label>
+								<input type="text" name="username" class="form-control" value="" />
+							</div>
+							<div class="form-group">
+								<label>Password</label>
+								<input type="password" name="password" class="form-control" value="" />
+							</div>
+							<div class="text-center"><button type="submit" class="btn btn-primary">Se connecter</button></div>
+						</form>
+					</div> <!-- end panel-body -->
+				</div> <!-- end panel -panel-default -->
+	        </div> <!-- end col-md-4 -->
+	    </div> <!-- end row vertical-center-row -->
+	</div> <!-- end container-table -->
+
 </body>
 </html>
